<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HBFavClone</string>
    <string name="action_settings">Settings</string>
    <string name="action_execute">Execute</string>
    <string name="action_delete">Delete</string>
    <string name="action_recent">Recent</string>
    <string name="action_dump">Dump</string>
    <string name="action_previous">previous</string>
    <string name="action_reload">reload</string>

    <!-- 最近の同期履歴 -->
    <string name="title_activity_recent">RecentActivity</string>

    <!-- ログイン -->
    <string name="title_activity_login">はてなID入力</string>
    <string name="action_login">LOGIN</string>
    <string name="action_cancel">CANCEL</string>
    <string name="input_hatena_id">はてなIDを入力してください</string>
    <string name="invalid_auth_token">不正なIDリクエストです</string>
    <string name="invalid_hatena_id">正しいIDを入力してください</string>

    <!-- 発言時刻 -->
    <string name="right_now">たった今</string>
    <string name="minute_ago">%1$d 分前</string>
    <string name="hour_ago">%1$d 時間前</string>
    <string name="day_ago">%1$d 日前</string>

    <!-- コメント表示 -->
    <string name="commented_users">件のコメント</string>
    <string name="another_users">ブックマークしたユーザー</string>

</resources>
