<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ash.glay.hbfavclone.LoginActivity"
    android:layout_gravity="center"
    android:orientation="vertical">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="15"
        android:maxLength="32"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/input_hatena_id"
        android:id="@+id/input_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/input_id"
        android:layout_alignBottom="@id/input_id"
        android:layout_toEndOf="@+id/alert_image"
        android:gravity="center_vertical"
        android:layout_marginStart="4dp"
        android:paddingBottom="8dp"
        android:text="@string/invalid_hatena_id"
        android:textColor="@color/alert"
        android:id="@+id/alert" />

    <ImageView
        android:id="@+id/alert_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/alert"
        android:layout_alignTop="@id/alert"
        android:layout_alignBottom="@id/alert"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_announcement_black_18dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/input_id"
        android:layout_marginTop="16dp">

        <Space
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginTop="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/space" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/action_login"
            android:id="@+id/logon"
            android:background="@drawable/button_material_blue"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/space" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:id="@+id/cancel"
            android:background="@drawable/button_material_glay"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/space" />
    </RelativeLayout>


</RelativeLayout>
